Fix bug #33  align css

--- a/src/pages/AdminApp/components/CompanyDetails/index.less
+++ b/src/pages/AdminApp/components/CompanyDetails/index.less
@@ -88,7 +88,7 @@
       }
       &__viewBottom {
         height: auto;
-        padding: 30px;
+        padding: 24px;
         font-size: 13px;
         line-height: 15px;
         color: #161c29;
